[gd_scene load_steps=24 format=3 uid="uid://sttnuxa5d1cw"]

[ext_resource type="Script" uid="uid://btd71j2dxi8p8" path="res://scripts/elements/enemis/slime.gd" id="1_mo4h8"]
[ext_resource type="Texture2D" uid="uid://lrm8cqpdwttn" path="res://assets/sprites/slime_green.png" id="2_llyuw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mo4h8"]
atlas = ExtResource("2_llyuw")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_llyuw"]
atlas = ExtResource("2_llyuw")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nivw5"]
atlas = ExtResource("2_llyuw")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlg68"]
atlas = ExtResource("2_llyuw")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjqgs"]
atlas = ExtResource("2_llyuw")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_18ktc"]
atlas = ExtResource("2_llyuw")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7loq1"]
atlas = ExtResource("2_llyuw")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w1ih"]
atlas = ExtResource("2_llyuw")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t0es"]
atlas = ExtResource("2_llyuw")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_stcvr"]
atlas = ExtResource("2_llyuw")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_txmx6"]
atlas = ExtResource("2_llyuw")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gux01"]
atlas = ExtResource("2_llyuw")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_qwfa6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo4h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llyuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llyuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nivw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nivw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nivw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nivw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nivw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo4h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo4h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo4h8")
}],
"loop": false,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlg68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjqgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18ktc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7loq1")
}],
"loop": false,
"name": &"damaged",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w1ih")
}],
"loop": false,
"name": &"death",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t0es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stcvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txmx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gux01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txmx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stcvr")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_mlg68"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageBox/HitBoxArea/HitBoxShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mo4h8"]
length = 1.83333
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333, 1.5, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageBox/HitBoxArea/HitBoxShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.3, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_dash_anim"
}]
}

[sub_resource type="Animation" id="Animation_llyuw"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["damaged"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageBox/HitBoxArea/HitBoxShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nivw5"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1w1ih"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["move"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mlg68"]
_data = {
&"RESET": SubResource("Animation_mlg68"),
&"attack": SubResource("Animation_mo4h8"),
&"damaged": SubResource("Animation_llyuw"),
&"death": SubResource("Animation_nivw5"),
&"move": SubResource("Animation_1w1ih")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mo4h8"]
size = Vector2(23, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_mo4h8"]
radius = 60.2993

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_mo4h8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_qwfa6")
animation = &"attack"
autoplay = "move"

[node name="PhysicShape" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(2, 0, 2, -5, -2, -5, -2, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mlg68")
}

[node name="DamageBox" type="Node2D" parent="."]

[node name="EdgeCheckerRayCast" type="RayCast2D" parent="DamageBox"]
position = Vector2(7, -1)
target_position = Vector2(0, 5)

[node name="HitBoxArea" type="Area2D" parent="DamageBox"]
collision_layer = 0
collision_mask = 2

[node name="HitBoxShape" type="CollisionPolygon2D" parent="DamageBox/HitBoxArea"]
position = Vector2(0, 1)
polygon = PackedVector2Array(5, -8, 11, -13, 11, -1, 5, 1)

[node name="HurtBoxArea" type="Area2D" parent="DamageBox"]
collision_layer = 4
collision_mask = 2

[node name="HurtBoxShape" type="CollisionPolygon2D" parent="DamageBox/HurtBoxArea"]
polygon = PackedVector2Array(-7, 0, -7, -4, -6, -4, -6, -5, -5, -5, -5, -11, 5, -11, 5, -5, 6, -5, 6, -4, 7, -4, 7, 0)

[node name="PlayerSeekArea" type="Area2D" parent="DamageBox"]
collision_layer = 0
collision_mask = 2

[node name="PlayerSeekShape" type="CollisionShape2D" parent="DamageBox/PlayerSeekArea"]
position = Vector2(15.5, -9.5)
shape = SubResource("RectangleShape2D_mo4h8")

[node name="ChaseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="ChaseShape" type="CollisionShape2D" parent="ChaseArea"]
shape = SubResource("CircleShape2D_mo4h8")

[node name="ChaseTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
